--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         input[type="text"], input[type="email"] {
             width: 100%;
-            padding: 10px;
+            padding: 10px 0;
             margin-bottom: 20px;
             border: 1px solid #dadce0;
             border-radius: 4px;
